Fixed issue of cards (both post and events) overflowing their contain. The problem was mostly having a min-width set.

--- a/site/_sass/cards.scss
+++ b/site/_sass/cards.scss
@@ -13,7 +13,6 @@
    grid-column-gap:          1rem;
    grid-row-gap:             1rem;
 
-   min-width:                30rem;
    padding:                  1rem 1rem 1rem 1rem;
 
    transition:               0.2s;
@@ -52,6 +51,7 @@
  .post-card-date
  {
    grid-area:                  date;
+   padding:                    1rem;
  }
 
  .post-card-list
@@ -75,10 +75,10 @@
    grid-column-gap:          1rem;
    grid-row-gap:             1rem;
 
-   min-width:                40rem;
    padding:                  1rem 1rem 1rem 1rem;
 
    transition:               0.2s;
+   width:                    95%;
 
    @media  (width < $mobile-width)
    {
@@ -121,4 +121,6 @@
  {
    display:             grid;
    grid-gap:            1rem;
+   width:               100%;
+   margin:              0;
  }
